# eatsomething

./: .gitignore  README.md  docker-compose.yml
src/api/: Cargo.toml  Dockerfile  data_model.txt  entrypoint.sh  package.json  rustfmt.toml
src/api/migrations/2022-09-09-200517_initial/: up.sql
src/api/src/: auth.rs  data_access.rs  env.rs  errors.rs  handlers.rs  main.rs  models.rs  pool.rs  routes.rs  schema.rs  user_handlers.rs
src/api/src/db/: migrations.rs  mod.rs
src/api/src/restaurant/: handlers.rs  mod.rs  models.rs
src/api/src/user/: handlers.rs  mod.rs  models.rs  routes.rs
src/ui/: Dockerfile  index.html  package-lock.json  package.json
src/ui/src/: index.html  index.tsx
src/ui/src/components/: AppBar.tsx  Home.tsx  Login.tsx
src/ui/src/components/widgets/: DataTable.tsx
