[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid"] }
serde = "1.0.144"
serde_derive = "1.0.144"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde"] }
warp = "0.3"
